# brainkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/: brainkit
.claude/hooks/: guard-bash.sh  lint-edited-file.sh  stop-verify.sh
.claude/skills/brainkit/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
src/brainkit/: __init__.py  brain.py  cli.py
tests/: conftest.py  test_brain.py  test_notes.py
